style.css
/* ... */
#container {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#header-section {
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

#main-header {
    margin-top: 307px;
    color: #67519A;
    font-size: 96px;
    font-weight: 900;
    text-align: center;
    margin-bottom: 0;
    max-height: 140px;
}

h1, h2, h3, h4, p {
    margin: 0;
}

.keyword {
    color: #ffffff;
}

#sub-header {
    margin-top: 0;
    color: rgba(255, 255, 255, 0.70);
    font-size: 38px;
    font-weight: 900;
    display: flex;
    justify-content: center;
    gap: 58px;
    max-height: 60px;
}

#GetStartedButton {
    margin-top: 77px;
    display: flex;
    justify-content: center;
    gap: 19px;
    align-items: center;
    font-weight: bold;
    font-size: 24px;
    background-color: #62587B;
    border-radius: 14px;
    padding: 19px 38px;
}

#engine-screenshot {
    margin: 0;
    margin-top: 154px;
    padding: 0;
    width: 1402px;
    max-width: 85%;
    height: auto;
    border-radius: 14px;
    box-shadow: 0 0 4px 10px rgba(18, 14, 28, 0.25);
}

#about-header {
    margin-top: 184px;
    color: #67519A;
    font-size: 65px;
    font-weight: 900;
    text-align: center;
    margin-bottom: 0;
    max-height: 140px;
}

#about-blocks {
    margin: 0;
    padding: 0;
    margin-top: 90px;
    width: 100%;
    display: flex;
    justify-content: space-around;
    gap: 38px;
}

#idea {
    border-radius: 24px 24px 24px 24px;
    background: linear-gradient(180deg, #2C3E50 0%, #4CA1AF 100%);
    box-shadow: 0 4px 4px 15px rgba(18, 14, 28, 0.25);
}

#revolution {
    border-radius: 24px 24px 24px 24px;
    background: linear-gradient(180deg, #D94343 0%, #FF8A5B 100%);
    box-shadow: 0 4px 4px 15px rgba(18, 14, 28, 0.25);
}

.about-block h2 {
    font-size: 5vw;
    font-weight: 700;
}

.about-block p {
    color: #FFF;
    text-align: justify;
    font-size: 24px;
    font-weight: 500;
    width: 39.1vw;
    margin-top: 38px;
}

.about-block {
    color: #FFF;
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 922px;
    padding: 31px;
}

#bob-wrap {
    display: flex;
    flex-direction: column;
    gap: 154px;
}

#bob-header {
    margin-top: 184px;
    color: #67519A;
    font-size: 65px;
    font-weight: 900;
    text-align: center;
    margin-bottom: 50px;
    max-height: 140px;
}

#meet-bob-section {
    width: 85%;
    display: flex;
    flex-direction: column;
}

.feature * {
    margin: 0;
}

.feature {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.feature:nth-of-type(odd) {
    flex-direction: row-reverse;
}

.feature-block {
    width: 829px;
    padding: 31px;
    border-radius: 24px;
    background: #62587B;
    box-shadow: 0 4px 4px 15px rgba(18, 14, 28, 0.25);
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.feature-block h3 {
    font-size: 38px;
    font-weight: 700;
}

.feature-block h5 {
    font-size: 24px;
    font-weight: 700;
    color: rgba(255, 255, 255, 0.70);
}

.feature-block p {
    font-size: 24px;
    font-weight: 500;
    text-align: justify;
    margin-top: 25px;
    width: 752px;
}

.feature img {
    width: auto;
    height: 500px;
}

#footer {
    background: #201A30;
    margin: 0;
    padding-bottom: 19px;
    padding-top: 96px;
    margin-top: 192px;
    width: 100%;
}

#footer-wrap {
    display: flex;
    justify-content: space-evenly;
    font-size: 24px;
    font-weight: 500;
}

#left-panel {
    display: flex;
    flex-direction: column;
}

#right-panel {
    display: flex;
    gap: 192px;
    align-items: center;
}

#right-panel h3 {
    font-size: 15px;
}

#right-panel h5 {
    font-size: 13px;
}

#logo-image {
    width: 60px;
    height: auto;
}

#mail-image {
    width: 33px;
    height: auto;
}

#mail h3 {
    font-size: 15px;
    font-weight: 500;
}

#logo {
    display: flex;
    gap: 19px;
    align-items: center;
}

#logo h2 {
    font-size: 48px;
}

#logo-sub-header {
    font-size: 15px;
    margin-left: 10px;
    font-weight: 500;
    color: rgba(255, 255, 255, 0.70);
}

#mail {
    margin-top: 48px;
    display: flex;
    gap: 10px;
    align-items: center;
    margin-left: 10px;
}

#footer h5 {
    font-weight: 500;
}

#footer p {
    text-align: center;
    margin-top: 96px;
    font-size: 19px;
    font-weight: 500;
}
/* ... */

